tried to fix vertical overflow

--- a/style.css
+++ b/style.css
@@ -3,11 +3,12 @@ body {
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  min-height: 100vh;
+  height: 100vh;
   background-color: #555;
   user-select: none;
   padding: env(safe-area-inset-top, 20px) env(safe-area-inset-right, 20px) env(safe-area-inset-bottom, 20px) env(safe-area-inset-left, 20px);
   -webkit-tap-highlight-color: transparent;
+  overflow: hidden;
   overscroll-behavior-y: contain;
 }
 
